# cizzle-app-starters

./: README.md
project-rules/: front-refine, back-dotnet_ef_sqlserver.md  front-tanstack_start, back-dotnet_ef_sqlserver.md  front-tanstack_start, back-prisma_supabase.md
repomixes/: _FRONTEND_DOCS.txt  _REFRESH.ps1  refine-docs.md  refine-docs.txt  starter-app-refine-dotnet-efcore-sqlserver.txt  starter-template-tanstack-start-clerk-supabase-shadcn.md  tanstack-form-docs.txt  tanstack-router-docs.repomix.txt  tanstack-start-bare.md  tanstack-start-basic-auth.md  tanstack-start-basic-react-query.md  tanstack-start-basic-rsc.md  tanstack-start-basic-static.md  tanstack-start-basic.md  tanstack-start-clerk-basic.md  tanstack-start-convex-trellaux.md  tanstack-start-large.md  tanstack-start-material-ui.md  tanstack-start-supabase-basic.md  tanstack-start-trellaux.md
templates/refine-dotnet-antd-enterprise/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
templates/tanstack-start-basic/: CLAUDE.md  app.config.ts
templates/tanstack-start-clerk-supabase-2/: .env  .gitignore  AI_INSTRUCTIONS.md  (+3 more)
templates/tanstack-start-django-shadcn/backend/: .env.example  README.md  db.sqlite3  pyproject.toml
templates/tanstack-start-django-shadcn/backend/.cursor/rules/: autofix-http.mdc
templates/tanstack-start-django-shadcn/backend/api/: adapters.py  serializers.py  urls.py  views.py
templates/tanstack-start-django-shadcn/backend/backend.egg-info/: PKG-INFO  requires.txt
templates/tanstack-start-django-shadcn/backend/project/: settings.py  urls.py
(+189 files in other folders)
